welcome.lessons.welcome.bat.bool1.In3050.scala.code
var c: Boolean=false

def in3050(a:Int, b:Int):Boolean = {
  if (((30<=a && a<=40)&& (30<=b && b<=40)){
    c=true
  }
  else if((40<=a && a<=50)&& (40<=b && b<=50))){
    
    c= true
  }else{
    c=false
  }
}